Blender Crashes when using 3D view set to RENDER and getmessage ("trace", "geom:name", nameStr); called in OSL #38900

Closed
opened 2014-03-01 06:33:08 +01:00 by Dylan Whiteman · 10 comments

System Information
Dell Inspiron 64bit
Windows 7

renderer: 'Intel(R) HD Graphics 4000'
vendor: 'Intel'
version: '4.0.0 - Build 9.17.10.2867'

Blender Version
Broken:
version 2.69 (sub 11), branch b'master', commit date b'2014-02-20' b'05:32', hash b'4789793', b'Release'
build date: b'2014-02-20', b'14:08:49'

Previous releases (2.69, 2.68 etc) crashed too.
Worked: (optional)

Blender crashes when trying to use the geom:name parameter in getmesage:

  getmessage ("trace", "geom:name", nameStr) 
  // If the line below is commented out, Blender does not crash.
  if (nameStr == "Cube") outcol = BLUE;

It will also crash if the "geom:name" parameter is changed to any of the other allowable strings.

Sample crash File:
http://www.pasteall.org/blend/27162

oslCrash01.blend

Exact steps for others to reproduce the error
To see the crash:
If you have downloaded "OSL_Crash01.blend": 1) Set the 3D VIEWPORT Shading setting to "RENDERED"
Blender will crash on a Windows 64bit machine.
Commenting out the line: if (nameStr == "Cube") outcol = BLUE;
below will allow the script to run.
If you just have this script source then, to see the crash: 1) Enamble OSL in Blender
2) Compile this script in the Blender text editor 3) Create a 3D mesh in Blender (e.g. the default cube)
4) Assign a new Cycles material to the new mesh. 5) Add a Script node to the new material and select this "osl_crash01.osl" script as the OSL script.
6) Connect the shaderOut node of hte script to the Material Output 7) Set the 3D VIEWPORT Shading setting to "RENDERED"
// Blender will crash on a Windows 64bit machine.

Thankyou for your help - and your work on this amazing system.

Cheers

Dylan

**System Information** Dell Inspiron 64bit Windows 7 renderer: 'Intel(R) HD Graphics 4000' vendor: 'Intel' version: '4.0.0 - Build 9.17.10.2867' **Blender Version** Broken: version 2.69 (sub 11), branch b'master', commit date b'2014-02-20' b'05:32', hash b'4789793', b'Release' build date: b'2014-02-20', b'14:08:49' Previous releases (2.69, 2.68 etc) crashed too. Worked: (optional) Blender crashes when trying to use the geom:name parameter in getmesage: ``` getmessage ("trace", "geom:name", nameStr) // If the line below is commented out, Blender does not crash. if (nameStr == "Cube") outcol = BLUE; ``` It will also crash if the "geom:name" parameter is changed to any of the other allowable strings. Sample crash File: http://www.pasteall.org/blend/27162 [oslCrash01.blend](https://archive.blender.org/developer/F79320/oslCrash01.blend) **Exact steps for others to reproduce the error** *To see the crash:* *If you have downloaded "OSL_Crash01.blend":* 1) Set the 3D VIEWPORT Shading setting to "RENDERED" *Blender will crash on a Windows 64bit machine.* *Commenting out the line:* if (nameStr == "Cube") outcol = BLUE; *below will allow the script to run.* *If you just have this script source then, to see the crash:* 1) Enamble OSL in Blender *2) Compile this script in the Blender text editor* 3) Create a 3D mesh in Blender (e.g. the default cube) *4) Assign a new Cycles material to the new mesh.* 5) Add a Script node to the new material and select this "osl_crash01.osl" script as the OSL script. *6) Connect the shaderOut node of hte script to the Material Output* 7) Set the 3D VIEWPORT Shading setting to "RENDERED" // Blender will crash on a Windows 64bit machine. Thankyou for your help - and your work on this amazing system. Cheers Dylan
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DylanWhiteman

Added subscriber: @DylanWhiteman
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I'm pretty sure this is a bug in OSL ...

I'm getting the same on 64bit arch linux running OSL 1.3.3. Latest OSL release is 1.5.5, they seem to have fixed quite a bunch of bugs relating to getmessage:

https://github.com/imageworks/OpenShadingLanguage/blob/master/CHANGES

We should consider upgrading after the Blender 2.70 release ...

I'm pretty sure this is a bug in OSL ... I'm getting the same on 64bit arch linux running OSL 1.3.3. Latest OSL release is 1.5.5, they seem to have fixed quite a bunch of bugs relating to `getmessage`: https://github.com/imageworks/OpenShadingLanguage/blob/master/CHANGES We should consider upgrading after the Blender 2.70 release ...
Brecht Van Lommel was assigned by Lukas Tönne 2014-03-01 09:59:20 +01:00

This issue was referenced by blender/blender-addons-contrib@3eabe064ab

This issue was referenced by blender/blender-addons-contrib@3eabe064ab5401b9f0267c0a4a31379541084610

This issue was referenced by 3eabe064ab

This issue was referenced by 3eabe064ab5401b9f0267c0a4a31379541084610

Fixed now, this was a bug in Cycles.

We could update OSL at some point but I wouldn't want to do it this close to the release.

Fixed now, this was a bug in Cycles. We could update OSL at some point but I wouldn't want to do it this close to the release.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3eabe064ab.

Closed by commit 3eabe064ab.
Author

Thanks so much for fixing this. It has really helped with the shader I'm working on. :-) Dylan

Thanks so much for fixing this. It has really helped with the shader I'm working on. :-) Dylan
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38900
No description provided.