Fix T38900: cycles OSL crash running getmessage("trace", "geom:name", name)